--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="../../../inc/jquery.widget.js"></script> 
     <script type="text/javascript" src="js/jquery.heatmap.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-    <title>Particle Flow</title>
+    <title>Heatmap</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #336;">
